--- a/.env.render
+++ b/.env.render
@@ -2,7 +2,7 @@
 # Use this for Render deployment
 
 # Database - Use connection pooling for Render
-DATABASE_URL=postgresql://postgres:Greatisrael123%40%23@db.wrsjqvexqpehpsmeafyg.supabase.co:5432/postgres?schema=public&sslmode=require&connect_timeout=60&pool_timeout=60&connection_limit=1
+DATABASE_URL=postgresql://postgres:Greatisrael123%40%23@db.wrsjqvexqpehpsmeafyg.supabase.co:5432/postgres?sslmode=require
 
 # Server
 PORT=3000
