Add Supabase Client SDK as Render deployment solution

--- a/.env.render
+++ b/.env.render
@@ -26,3 +26,7 @@ FRONTEND_URL=https://your-frontend-domain.vercel.app
 # Email
 EMAIL_USER=israelloko65@gmail.com
 EMAIL_PASS=njjs jqwm ywgx qmdj
+
+# Supabase Configuration (for Render deployment)
+SUPABASE_URL=https://wrsjqvexqpehpsmeafyg.supabase.co
+SUPABASE_ANON_KEY=your-supabase-anon-key-here
