--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "prisma:migrate": "prisma migrate dev",
     "prisma:studio": "prisma studio"
   },
-  "keywords": ["mood-tracking", "express", "prisma", "socket.io"],
+  "keywords": [
+    "mood-tracking",
+    "express",
+    "prisma",
+    "socket.io"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "@supabase/supabase-js": "^2.86.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
